--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mariadb://localhost:3306/animalerie
+spring.datasource.url=jdbc:mariadb://localhost:3306/petstore
 spring.datasource.username=root
 spring.datasource.password=root
 
